--- a/soverance.com/Views/Blog/DeleteCategory.cshtml
+++ b/soverance.com/Views/Blog/DeleteCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model soverance.com.Models.Blogs
+﻿@model soverance.com.Models.Category
 
 @{
     ViewData["Title"] = "Delete";
@@ -14,7 +14,6 @@
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
-                <a href="#">Delete</a> /
                 <span class="color-1">Delete</span>
             </div>
         </div>
@@ -31,16 +30,16 @@
                     <div>
                         <dl class="dl-horizontal">
                             <dt>
-                                @Html.DisplayNameFor(model => model.Url)
+                                @Html.DisplayNameFor(model => model.CategoryName)
                             </dt>
                             <dd>
-                                @Html.DisplayFor(model => model.Url)
+                                @Html.DisplayFor(model => model.CategoryName)
                             </dd>
                         </dl>
 
-                        <form asp-action="Delete">
-                            <input type="hidden" asp-for="BlogsId" />
-                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                        <form asp-action="DeleteCategory">
+                            <input type="hidden" asp-for="CategoryId" />
+                            <input type="submit" value="Delete" class="btn header-btn ml25 color-white hidden-sm hidden-xs" /> |
                             <a asp-action="Index">Back to List</a>
                         </form>
                     </div>
