Some work on creating new posts...

--- a/soverance.com/Views/Blog/DeleteCategory.cshtml
+++ b/soverance.com/Views/Blog/DeleteCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model soverance.com.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
 }
 
 <!-- PAGE NAME START -->
@@ -9,12 +9,12 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Delete
+                Delete Category
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
-                <span class="color-1">Delete</span>
+                <span class="color-1">Delete Category</span>
             </div>
         </div>
     </div>
