--- a/soverance.com/Views/Blog/DetailsCategory.cshtml
+++ b/soverance.com/Views/Blog/DetailsCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model soverance.com.Models.Category
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = " Category Details";
 }
 
 <!-- PAGE NAME START -->
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Details
+                Category Details
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
