--- a/soverance.com/Views/Blog/EditCategory.cshtml
+++ b/soverance.com/Views/Blog/EditCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model soverance.com.Models.Category
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Category";
 }
 
 <!-- PAGE NAME START -->
@@ -14,7 +14,7 @@
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
-                <span class="color-1">Edit</span>
+                <span class="color-1">Edit Category</span>
             </div>
         </div>
     </div>
