--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -1,7 +1,7 @@
-﻿@model soverance.com.Models.Category
+﻿@model soverance.com.Models.Post
 
 @{
-    ViewData["Title"] = "Create Category";
+    ViewData["Title"] = "Create Post";
 }
 
 <!-- PAGE NAME START -->
@@ -9,12 +9,12 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Create Category
+                Create Post
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
-                <span class="color-1">Create Category</span>
+                <span class="color-1">Create Post</span>
             </div>
         </div>
     </div>
@@ -25,12 +25,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7 col-xs-12">
-                <form asp-action="CreateCategory">
+                <form asp-action="CreatePost">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
-                        <label asp-for="CategoryName" class="control-label"></label>
-                        <input asp-for="CategoryName" class="form-control" />
-                        <span asp-validation-for="CategoryName" class="text-danger"></span>
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <input asp-for="CategoryId" class="form-control" />
+                        <span asp-validation-for="CategoryId" class="text-danger">@Html.DisplayFor(modelItem => Model.Category)</span>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn header-btn ml25 color-white hidden-sm hidden-xs" />
