Post Create/Delete works
Edit still needs some work.

--- a/soverance.com/Views/Blog/CreateCategory.cshtml
+++ b/soverance.com/Views/Blog/CreateCategory.cshtml
@@ -33,7 +33,7 @@
                         <span asp-validation-for="CategoryName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn header-btn ml25 color-white hidden-sm hidden-xs" />
+                        <input type="submit" value="Create" class="btn border-btn plr50 ptb19 color-white" />
                     </div>
                 </form>
             </div>
