--- a/soverance.com/Views/Blog/DeletePost.cshtml
+++ b/soverance.com/Views/Blog/DeletePost.cshtml
@@ -1,7 +1,7 @@
-﻿@model soverance.com.Models.Category
+﻿@model soverance.com.Models.Post
 
 @{
-    ViewData["Title"] = " Category Details";
+    ViewData["Title"] = "Delete Post";
 }
 
 <!-- PAGE NAME START -->
@@ -9,12 +9,12 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Category Details
+                Delete Post
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
-                <span class="color-1">Details</span>
+                <span class="color-1">Delete Post</span>
             </div>
         </div>
     </div>
@@ -26,29 +26,22 @@
         <div class="row">
             <div class="item-left col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="equal-height">
+                    <h3>Are you sure you want to delete this?</h3>
                     <div>
-                        <h4>Category Details</h4>
-                        <hr />
                         <dl class="dl-horizontal">
                             <dt>
-                                @Html.DisplayNameFor(model => model.CategoryId)
+                                @Html.DisplayNameFor(model => model.Title)
                             </dt>
                             <dd>
-                                @Html.DisplayFor(model => model.CategoryId)
+                                @Html.DisplayFor(model => model.Title)
                             </dd>
                         </dl>
-                        <dl class="dl-horizontal">
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CategoryName)
-                            </dt>
-                            <dd>
-                                @Html.DisplayFor(model => model.CategoryName)
-                            </dd>
-                        </dl>
-                    </div>
-                    <div>
-                        <a asp-action="EditCategory" asp-route-id="@Model.CategoryId">Edit</a> |
-                        <a asp-action="Index">Back to List</a>
+
+                        <form asp-action="DeletePost">
+                            <input type="hidden" asp-for="PostId" />
+                            <input type="submit" value="Delete" class="btn border-btn plr50 ptb19 color-white" /> |
+                            <a asp-action="Index">Back to List</a>
+                        </form>
                     </div>
                 </div>
             </div>
