--- a/soverance.com/Views/Blog/EditCategory.cshtml
+++ b/soverance.com/Views/Blog/EditCategory.cshtml
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Edit
+                Edit Category
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
@@ -37,7 +37,7 @@
                                     <span asp-validation-for="CategoryName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Save" class="btn header-btn ml25 color-white hidden-sm hidden-xs" />
+                                    <input type="submit" value="Save" class="btn border-btn plr50 ptb19 color-white" />
                                 </div>
                             </form>
                         </div>
